@@ -1,3 +1,9 @@
+trunk
+- fix some string encoding problems (and crashes) with 
+  non-ascii user names or folder names.
+- Unix/Linux: make data folder permissions more restrictive
+- Windows: update the bundled tor.exe to current stable version 0.2.2.34
+
 version 0.9.9.534
 - Windows: fix old scroll bug which reappeared on Windows 7
 - added Russian translation
